--- a/Fundamental Training Assesments/Excersise/C#/Qstn6/Qstn6/Qstn6.csproj
+++ b/Fundamental Training Assesments/Excersise/C#/Qstn6/Qstn6/Qstn6.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Program.cs" />
+    <Compile Remove="Class1.cs" />
   </ItemGroup>
 
 </Project>
